# flashpaper

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  gemini.py  ingest.py  main.py
app/routers/: __init__.py
app/templates/: examples.html  index.html
demo/: adam-optimizer.html  attention-is-all-you-need.html  deep-residual-learning.html
prompts/: master.txt
